@@ -18,6 +18,7 @@
 	(PokerRendererTests.MockGame): Wrote method.
 	(PokerRendererTests.MockPlayer): Created mock up.
 	(PokerRendererTests.test06_sitOutButWithGameBadPlayer): Wrote test.
+	(PokerRendererTests.test07_chatFormatMessage): Wrote method.
 
 2008-07-07  Johan Euphrosine  <proppy@aminche.com>
 
